Field Footprint/objects/FootPrint__c.object
<CustomObject>
    <fields>
        <fullName>Analysis_Date__c</fullName>
        <label>Analysis Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EmailMe__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EmailMe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FootPrint_Custom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FootPrint_Fields__c</fullName>
        <label>Fields</label>
        <summaryForeignKey>Footprint_Line_Item__c.Footprint_Line_Items_Object_Analysis__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FootPrint_Filter__c</fullName>
        <label>Filter</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FootPrint_Object_Label__c</fullName>
        <label>Object Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FootPrint_Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FootPrint_Record_Types__c</fullName>
        <label>Record Types</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FootPrint_Records__c</fullName>
        <label>Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Footprint_Tech_Batches__c</fullName>
        <label>Batches</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive_RT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive RT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MaxRange__c</fullName>
        <defaultValue>100</defaultValue>
        <label>MaxRange</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinRange__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MinRange</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RangeSelected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RangeSelected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The user&apos;s choice to include validation rules</description>
        <label>Include Validation rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>the user&apos;s choice to include workflow rules and field updates in the analysis</description>
        <label>Include Workflows</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isAnalysed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isAnalysed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isEditable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isEditable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>reports__c</fullName>
        <defaultValue>false</defaultValue>
        <label>reports</label>
        <type>Checkbox</type>
    </fields>
    <label>Footprint</label>
    <listViews>
        <fullName>All_footprints</fullName>
        <columns>NAME</columns>
        <columns>FootPrint_Object_Name__c</columns>
        <columns>Analysis_Date__c</columns>
        <columns>FootPrint_Records__c</columns>
        <columns>FootPrint_Fields__c</columns>
        <filterScope>Everything</filterScope>
        <label>All footprints</label>
    </listViews>
    <nameField>
        <label>Footprint Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Footprint</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FP_BlockEdit</fullName>
        <active>false</active>
        <errorConditionFormula>PRIORVALUE( FootPrint_Filter__c ) != FootPrint_Filter__c</errorConditionFormula>
        <errorDisplayField>FootPrint_Filter__c</errorDisplayField>
        <errorMessage>You cannot edit This field</errorMessage>
    </validationRules>
</CustomObject>